--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "mage-icons-react": "^0.7.0-beta",
     "next": "15.3.2",
     "next-pwa": "^5.6.0",
     "react": "^19.0.0",
